--- a/Baithi/src/main/resources/templates/employees/delete.html
+++ b/Baithi/src/main/resources/templates/employees/delete.html
@@ -3,51 +3,91 @@
       xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <title>Delete Employee</title>
 </head>
 <body>
 <h1>Delete Employee</h1>
 <h2>Are you sure?</h2>
-<p>
-    <a href="/employees">Employees list</a>
-</p>
-<form th:action="@{/delete-employee}" th:object="${employee}" method="post">
-    <input th:type="hidden" name="id" th:field="*{id}">
-    <table border="1">
-        <tr>
-            <td>Họ tên:</td>
-            <td th:text="${employee.name}"></td>
-        </tr>
-        <tr>
-            <td>Giới tính:</td>
-            <td th:text="${employee.gender}"></td>
-        </tr>
-        <tr>
-            <td>Office:</td>
-            <td th:text="${employee.office.name}"></td>
-        </tr>
-        <tr>
-            <td>Ngày sinh:</td>
-            <td th:text="${employee.dob}"></td>
-        </tr>
-        <tr>
-            <td>Số điện thoại:</td>
-            <td th:text="${employee.phone}"></td>
-        </tr>
-        <tr>
-            <td>Chứng minh nhân dân:</td>
-            <td th:text="${employee.cmnd}"></td>
-        </tr>
-
-        <tr>
-            <td>Địa chỉ:</td>
-            <td th:text="${employee.address}"></td>
-        </tr>
-        <tr>
-            <td></td>
-            <td><input type="submit" value="Delete"></td>
-        </tr>
-    </table>
-</form>
+<button class="btn btn-primary" >
+    <a href="/employees" style="color: black">Employees list</a>
+</button>
+<br>
+<br>
+<div class="col-lg-4">
+    <div class="card" style="border: 1px solid black">
+        <div class=" card-body card-block ">
+            <form th:action="@{/delete-employee}" th:object="${employee}" method="post" class="form-horizontal ">
+                <div class="row form-group ">
+                    <input th:type="hidden" name="id" th:field="*{id}">
+                    <div class="col col-md-3 ">
+                        <label class=" form-control-label ">Họ tên:</label>
+                    </div>
+                    <div class="col-12 col-md-9 ">
+                        <input type="text"  th:value="${employee.name}" disabled=" " class="form-control ">
+                    </div>
+                </div>
+                <div class="row form-group ">
+                    <div class="col col-md-3 ">
+                        <label class=" form-control-label ">Giới tính:</label>
+                    </div>
+                    <div class="col-12 col-md-9 ">
+                        <input type="text" th:value="${employee.gender}" disabled=" " class="form-control ">
+                    </div>
+                </div>
+                <div class="row form-group ">
+                    <div class="col col-md-3 ">
+                        <label class=" form-control-label ">Nhóm nhân viên:</label>
+                    </div>
+                    <div class="col-12 col-md-9 ">
+                        <input type="text" th:value="${employee.office.name}" disabled=" " class="form-control ">
+                    </div>
+                </div>
+                <div class="row form-group ">
+                    <div class="col col-md-3 ">
+                        <label class=" form-control-label ">Ngày sinh:</label>
+                    </div>
+                    <div class="col-12 col-md-9 ">
+                        <input type="text"  th:value="${employee.dob}" disabled=" " class="form-control ">
+                    </div>
+                </div>
+                <div class="row form-group ">
+                    <div class="col col-md-3 ">
+                        <label  class=" form-control-label ">Số điện thoại:</label>
+                    </div>
+                    <div class="col-12 col-md-9 ">
+                        <input type="text"  th:value="${employee.phone}" disabled=" "  class="form-control ">
+                    </div>
+                </div>
+                <div class="row form-group ">
+                    <div class="col col-md-3 ">
+                        <label  class=" form-control-label ">Chứng minh nhân dân:</label>
+                    </div>
+                    <div class="col-12 col-md-9 ">
+                        <input type="text" th:value="${employee.cmnd}" disabled=" " class="form-control ">
+                    </div>
+                </div>
+                <div class="row form-group ">
+                    <div class="col col-md-3 ">
+                        <label  class=" form-control-label ">Email:</label>
+                    </div>
+                    <div class="col-12 col-md-9 ">
+                        <input type="text" th:value="${employee.email}" disabled=" "  class="form-control ">
+                    </div>
+                </div>
+                <div class="row form-group ">
+                    <div class="col col-md-3 ">
+                        <label class=" form-control-label ">Address</label>
+                    </div>
+                    <div class="col-12 col-md-9 ">
+                        <textarea th:text="${employee.address}" disabled=" " class="form-control "></textarea>
+                    </div>
+                </div>
+                <td><input class="btn btn-primary" type="submit" value="Delete"></td>
+            </form>
+        </div>
+    </div>
+</div>
 </body>
 </html>
