--- a/Baithi/src/main/resources/templates/employees/edit.html
+++ b/Baithi/src/main/resources/templates/employees/edit.html
@@ -107,7 +107,7 @@
                 <div style="float: right">
                     <td><input class="btn btn-primary" type="submit" value="Save"></td>
                     <button class="btn btn-primary">
-                        <a href="/employees" style="color: white;">Back list</i></a>
+                        <a href="/" style="color: white;">Back list</i></a>
                     </button>
                 </div>
             </form>
